// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ScrollBox rendering renders expected elements 1`] = `
<div
  className="ScrollBox"
>
  <IconButton
    aria-label="Scroll left"
    className="ScrollBox__btn"
    icon={[Function]}
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <div
    className="ScrollBox__track"
  >
    <div>
      Test
    </div>
  </div>
  <IconButton
    aria-label="Scroll right"
    className="ScrollBox__btn"
    icon={[Function]}
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`ScrollBox rendering renders expected elements when className is set 1`] = `
<div
  className="ScrollBox TestClass"
>
  <IconButton
    aria-label="Scroll left"
    className="ScrollBox__btn"
    icon={[Function]}
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <div
    className="ScrollBox__track"
  >
    <div>
      Test
    </div>
  </div>
  <IconButton
    aria-label="Scroll right"
    className="ScrollBox__btn"
    icon={[Function]}
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;
